--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
     "version": "0.0.2",
     "scripts": {
         "format": "biome format --write",
-        "lint": "biome lint --write",
-        "check": "biome check --write"
+        "lint": "biome lint",
+        "lint:fix": "biome lint --write",
+        "check": "biome check",
+        "check:fix": "biome check --write",
     },
     "devDependencies": {
         "@types/bun": "latest",
@@ -16,7 +18,8 @@
     "peerDependencies": {
         "typescript": "^5.5.0"
     },
+    "trustedDependencies": ["@biomejs/biome"],
     "dependencies": {
-        "@dragee-io/type": "https://github.com/dragee-io/dragee-model"
+        "@dragee-io/type": "0.0.1"
     }
 }
