--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
         "lint": "biome lint",
         "lint:fix": "biome lint --write",
         "check": "biome check",
-        "check:fix": "biome check --write"
+        "check:fix": "biome check --write",
+        "test": "bun test --watch"
     },
     "devDependencies": {
         "@types/bun": "latest",
