feat: update ddd dependencies rules (#7)
feat: add ddd events must only depend on value objects
chore: remove aggregates size limit rule
feat: add ddd entities must only depend on value objects, commands or
events
fix: a command can only depend on value objects
chore: add test script
build: update @dragee-io/type to fix single rule test
fix: aggregates can depend on command

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
         "lint": "biome lint",
         "lint:fix": "biome lint --write",
         "check": "biome check",
-        "check:fix": "biome check --write"
+        "check:fix": "biome check --write",
+        "test": "bun test --watch"
     },
     "devDependencies": {
         "@types/bun": "latest",
@@ -20,6 +21,6 @@
     },
     "trustedDependencies": ["@biomejs/biome"],
     "dependencies": {
-        "@dragee-io/type": "0.0.1"
+        "@dragee-io/type": "0.0.2"
     }
 }
