--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,3 @@
 //registry.npmjs.org/:_authToken=${NPM_TOKEN}
 
-@dragee-io:registry=https://registry.npmjs.org/
+@fixentropy-io:registry=https://registry.npmjs.org/
